# Queueker

./: .gitignore  Cargo.toml  README.md  appsettings.json  queuelist.json
Clients/dotnet/QueuekerDotnet/: QueuekerDotnet.sln
Clients/dotnet/QueuekerDotnet/Queueker/core/Client/: IQueuekerClient.cs  QueueRequestResult.cs  QueuekerClient.cs
Clients/dotnet/QueuekerDotnet/Queueker/core/Protocol/: MessageInfo.cs  ProtocolInnerMessage.cs  QueueItemInfo.cs  ResultMessage.cs
Clients/dotnet/QueuekerDotnet/Queueker/core/Settings/: QueuekerSettings.cs
Clients/dotnet/QueuekerDotnet/Queueker/core/Transport/: HttpTransport.cs  ITransport.cs  TcpTransport.cs  TransportFactory.cs  TransportTypes.cs
Clients/dotnet/QueuekerDotnet/QueuekerTuner/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  QueuekerTuner.csproj
Clients/dotnet/QueuekerDotnet/QueuekerTuner/core/: Credentials.cs  TestItem.cs
Clients/dotnet/QueuekerDotnet/QueuekerTuner/ui/: AddNewQueueWindow.xaml  AddNewQueueWindow.xaml.cs
Clients/dotnet/QueuekerDotnet/QueuekerTuner/ui/logic/: Command.cs  PrimeWindowVM.cs
src/: main.rs  prime_logic.rs  queue_logic.rs  request_logic.rs  settings_file.rs
